# 2019Fall_Global_Illumination

./: .gitignore  CMakeLists.txt  main.cpp
include/: bbox.h  camera.h  entities.h  material.h  node.cpp  node.h  octree.h  ray.h  raytracer.h  utils.h
src/: entities.cpp
